# slurmbot

./: README.md  config.yaml  pyproject.toml  test.ipynb
slurmbot/: __main__.py
